force-app/main/default/objects/MUSW__Receipt__c/fields/BGBK__Gateway_Response__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Gateway_Response__c</fullName>
    <description>Response from the Payment Gateway</description>
    <inlineHelpText>Response from the Payment Gateway</inlineHelpText>
    <label>Gateway Response</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>