force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount_Available__c</fullName>
    <description>Amount outstanding based on the following formula: (amount tendered) - (amount used) - (amount refunded) - (change amount) - (amount rejected)</description>
    <label>Amount Remaining</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>