force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Amount_Rejected__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount_Rejected__c</fullName>
    <description>Amount rejected when the payment is voided.</description>
    <inlineHelpText>Amount of money to be made unavailable within the system.</inlineHelpText>
    <label>Amount Rejected</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>