force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Amount_Used__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount_Used__c</fullName>
    <description>Total amount that was used for the fee payment and deposit collection.</description>
    <formula>MUSW__Amount_Tendered__c  - MUSW__Amount_Rejected__c - MUSW__Amount_Available__c - MUSW__Change__c - MUSW__Amount_Refunded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>