force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Card_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Card_Number__c</fullName>
    <description>Deprecated.</description>
    <label>Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>