force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Check_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Check_Number__c</fullName>
    <label>Check Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>