force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Deposit_Amount__c</fullName>
    <label>Deposit Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>