force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Iss_Track_No__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Iss_Track_No__c</fullName>
    <formula>IF(ISBLANK(MUSW__Track_No__c),
    HYPERLINK(
        &quot;/&quot; &amp; Id,
        Name,
        &quot;_parent&quot;
    ),
    HYPERLINK(
        &quot;/&quot; &amp; Id,
        MUSW__Track_No__c,
        &quot;_parent&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Iss. Receipt No.</label>
    <type>Text</type>
</CustomField>