force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Payment_Gateway_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Payment_Gateway_Transaction_Number__c</fullName>
    <label>Payment Gateway Transaction Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>