force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Permit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NOT IN USE</description>
    <label>Permit</label>
    <referenceTo>MUSW__Permit__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>