force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Track_No__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Track_No__c</fullName>
    <externalId>true</externalId>
    <label>Receipt No.</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>