force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Void_Reason__c</fullName>
    <label>Void Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Sufficient Funds</fullName>
            </value>
            <value>
                <fullName>Credit Card Charge Back</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>