force-app/main/default/objects/MUSW__Receipt__c/fields/Number_of_Payable_Receipt_Record__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payable_Receipt_Record__c</fullName>
    <label>Number of Payable Receipt Record</label>
    <summaryForeignKey>MUSW__Payable_Receipt__c.MUSW__Receipt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>