force-app/main/default/objects/MUSW__Receipt__c/fields/Number_of_Payment_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payment_Records__c</fullName>
    <label>Number of Payment Records</label>
    <summaryForeignKey>BGBK__Payment__c.BGBK__Receipt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>