force-app/main/default/objects/MUSW__Receipt__c/fields/Payment_Batch__c.field-meta.xml
<CustomField>
    <fullName>Payment_Batch__c</fullName>
    <formula>BGBK__Cart__r.BGBK__BG_Payment_Batch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Batch</label>
    <type>Text</type>
</CustomField>