force-app/main/default/objects/MUSW__Receipt__c/fields/Payment_Gateway_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Transaction_Fee__c</fullName>
    <label>Payment Gateway Transaction Fee</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>