force-app/main/default/objects/MUSW__Receipt__c/fields/System_Text__c.field-meta.xml
<CustomField>
    <fullName>System_Text__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>System Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>