force-app/main/default/objects/MUSW__Receipt__c/validationRules/MUSW__Cannot_refund_more_than_available_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Cannot_refund_more_than_available_amount</fullName>
    <active>true</active>
    <description>Cannot refund more than available amount</description>
    <errorConditionFormula>AND(ISCHANGED(  MUSW__Amount_Refunded__c ), BLANKVALUE( MUSW__Amount_Refunded__c ,0) - BLANKVALUE(PRIORVALUE(  MUSW__Amount_Refunded__c ),0)  - (MUSW__Amount_Tendered__c - PRIORVALUE(MUSW__Amount_Tendered__c)) &gt; BLANKVALUE(  PRIORVALUE(MUSW__Amount_Available__c),0) )</errorConditionFormula>
    <errorDisplayField>MUSW__Amount_Refunded__c</errorDisplayField>
    <errorMessage>Cannot refund more than Remaining Amount</errorMessage>
</ValidationRule>