force-app/main/default/objects/MUSW__Receipt__c/validationRules/MUSW__Insufficient_deposit_to_use.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Insufficient_deposit_to_use</fullName>
    <active>true</active>
    <errorConditionFormula>MUSW__Deposit_Used__c &gt; MUSW__Deposit_Amount__c</errorConditionFormula>
    <errorDisplayField>MUSW__Deposit_Used__c</errorDisplayField>
    <errorMessage>Cannot use more than the Available Deposit</errorMessage>
</ValidationRule>