force-app/main/default/objects/MUSW__Receipt__c/validationRules/MUSW__Rejected_more_than_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Rejected_more_than_Available</fullName>
    <active>true</active>
    <description>Cannot reject more than the Remaining Amount of Receipt if Receipt Status is not set &apos;Voided&apos; or &apos;Failed&apos;</description>
    <errorConditionFormula>AND(ISCHANGED( MUSW__Amount_Rejected__c ), NOT(AND(ISCHANGED(MUSW__Status__c), OR(ISPICKVAL(MUSW__Status__c, &apos;Voided&apos;), ISPICKVAL(MUSW__Status__c, &apos;Failed&apos;)))), BLANKVALUE(MUSW__Amount_Rejected__c,0) - BLANKVALUE(PRIORVALUE( MUSW__Amount_Rejected__c),0)  - (MUSW__Amount_Tendered__c - PRIORVALUE(MUSW__Amount_Tendered__c)) &gt; BLANKVALUE(PRIORVALUE( MUSW__Amount_Available__c),0) )</errorConditionFormula>
    <errorMessage>Cannot Reject more than the Remaining Amount of Receipts</errorMessage>
</ValidationRule>