force-app/main/default/objects/MUSW__Receipt__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Payment_Method__c</columns>
    <columns>MUSW__Effective_Date__c</columns>
    <columns>MUSW__Receipt_Paid_By__c</columns>
    <columns>MUSW__Amount_Tendered__c</columns>
    <columns>MUSW__Amount_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>